--- a/css/test.css
+++ b/css/test.css
@@ -440,45 +440,14 @@ html {
 main {
   font-family: "Helvetica", Helvetica, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
   overflow-y: scroll; }
-/*
-.container {
-    width: 100%;
-	margin-left: 2%;
-}
 
-@media all and (min-width: 740px) {
-    .container {
-        width: 640px;
-    }
-}
-
-@media all and (min-width: 1100px) {
-    .container {
-        width: 1020px;
-    }
-}
-
-@media all and (min-width: 1300px) {
-    .container {
-        width: 1124px;
-		height: 260px;
-    }
-}
-
-@media all and (min-width: 1500px) {
-    .container {
-        width: 1155px;
-		height: 433px;
-    }
-}*/
-/* -------------------------------- */
 
 /* NAVIGATION BAR ----------------- */
 .nav {
     position: fixed;
     width: 100%;
     min-height: 50px;
-    height: 10vh;;
+    height: 90px;
     padding-top: 10px;
     z-index: 5;
 	visibility: hidden;
@@ -491,7 +460,7 @@ main {
     height: auto;
     min-height: 50px;
     display: inherit;
-    margin: 0.5vh;
+    margin: 5px 0;
     overflow: hidden;
     cursor: default !important; 
     text-align: center;
@@ -587,12 +556,12 @@ body input:checked + label span:last-child {
 /* Close button from fullscreen / expandable view - svg */
 .nav_x {
     position: absolute;
-    top: -60%;
+    top: -30px;
     left: 10%;
     width: 26px;
     height: 26px;
     cursor: pointer;
-    z-index: 1000;
+    z-index: 10;
     transition: transform .2s ease-in-out;
 	-moz-transition: transform .2s ease-in-out;
 	-webkit-transition: transform .2s ease-in-out;
@@ -731,10 +700,10 @@ body input:checked + label span:last-child {
 
 /* CONTENT TEAM & ABOUT ----------- */
 body input ~ div {
-  background-color: rgba(255,255,255,0.5); /*#E0E0E0;*/
+  background-color: rgba(255,255,255,0.8); /*#E0E0E0;*/
   position: fixed;
   overflow-y: scroll;
-  top: 80px; bottom: 0; left: 0; right: 0;
+  top: 90px; bottom: 0; left: 0; right: 0;
   width: 100%; height: 0%;
   transition: 0.5s ease-in-out 0.8s;
   -moz-transition: 0.5s ease-in-out 0.8s;
@@ -861,11 +830,11 @@ body input:checked ~ div .content-list{
 body input ~ div .footnote {
 	position: fixed;
 	width: 100%;
-	bottom: 0px;
-	height: 35px;
+	bottom: 20px;
 	padding-left: 20px;
 	padding-right: 20px;
-	font-size: 11px;
+	font-size: 12px;
+	font-weight: 400;
 	color: #ff2100;
 	text-align: center;
 	visibility: hidden;
@@ -894,7 +863,9 @@ body input:checked ~ div .footnote {
     text-align: center;
 	vertical-align: center;
     opacity: 0;
+	z-index: 0;
 	text-decoration: none;
+	transition: filter 1s ease-in-out 0.5s;
 }
 
 @media all and (min-width: 780px) {
@@ -940,11 +911,7 @@ body input:checked ~ div .footnote {
 }
 /* -------------------------------- */
 
-
-/*
- *
- *
- * DON'T GO ANY FURTHER - THERE'RE HOBBITS HERE */
+/* LIST --------------------------- */
 .list {
     position: absolute;
     visibility: hidden;
@@ -956,7 +923,6 @@ body input:checked ~ div .footnote {
     height: 500px;
     position: absolute;
     z-index: 0;
-	/*box-shadow: 10px 10px 30px #888;*/
 }
 
 .list_item:nth-child(2) .list_bg, .list_item:nth-child(5) .list_bg, .list_item:nth-child(8) .list_bg {
@@ -975,33 +941,57 @@ body input:checked ~ div .footnote {
 }
 
 .list_title {
-    font-size: 600px;
+    font-size: 80px;
     line-height: 1em;
-	letter-spacing: -15px;
+	letter-spacing: -5px;
 	font-weight: 600;
     color: rgba(255,255,255,1);
     position: absolute;
     z-index: 2;
     top: 50%;
-    margin-top: -355px;
+    margin-top: -210px;
 	margin-left: 0;
-    width: 80%;
+    width: 60%;
     text-align: left;
 }
 
-@media all and (min-width: 780px) {
-    .list_title {
-        font-size: 250px;
-    }
-}
-
-@media all and (min-width: 1650px) and (min-height: 1070px) {
+@media all and (min-width: 450px) {
     .list_title {
         font-size: 130px;
-        margin-top: -45px;
+		letter-spacing: -10px;
+		margin-top: -230px;
+    }
+}
+@media all and (min-width: 780px) {
+    .list_title {
+        font-size: 180px;
+		margin-top: -280px;
+    }
+}
+@media all and (min-width: 980px) {
+    .list_title {
+        font-size: 200px;
+		letter-spacing: -15px;
+		margin-top: -385px;
+    }
+}
+@media all and (min-width: 980px) {
+    .list_title {
+        font-size: 200px;
+    }
+}
+@media all and (min-width: 1220px) {
+    .list_title {
+        font-size: 230px;
+    }
+}
+@media all and (min-width: 1500px) {
+    .list_title {
+        font-size: 260px;
     }
 }
 
+/* ONLY FOR CONTEST */
 .list_cta {
     font-family: "Helvetica";
     font-size: 16px;
@@ -1030,6 +1020,7 @@ body input:checked ~ div .footnote {
         margin-top: 50px;
     }
 }
+/* ---------------- */
 
 .list_header {
     position: absolute;
@@ -1038,7 +1029,7 @@ body input:checked ~ div .footnote {
     overflow: hidden;
 }
 
-.list_album {
+.list_photo {
 	position: absolute;
 	width: 400px;
 	height: 400px;
@@ -1046,7 +1037,7 @@ body input:checked ~ div .footnote {
     margin-top: -200px;
 	left: 50%;
 	top:50%;
-	display: none;
+	display: block;
 	overflow: hidden;
 	box-shadow: 4px 4px 4px 2px rgba(50, 50, 50, 0.15);
 	border-color: #fff;
@@ -1056,7 +1047,7 @@ body input:checked ~ div .footnote {
 	filter: none;
 	z-index: 4;
 }
-.list_album img {
+.list_photo img {
 	width: 400px;
 	height: 400px;
 	object-fit: cover;
@@ -1064,139 +1055,31 @@ body input:checked ~ div .footnote {
 	transform: scale(1.03);
 }
 
-.list_album .blur {
+.list_photo .blur {
 	filter: blur(4px);
 	transform: filter 0.7s ease-in-out;
 }
 
 
-.list_album:nth-child(2) {
+.list_photo:nth-child(2) {
     background-color: #003264;
 }
 
-.list_album:nth-child(3) {
+.list_photo:nth-child(3) {
     background-color: #fa4b4b;
-}
-
-@media all and (min-width: 780px) {
-    .list_album {
-        display: block;
-    }
 }
 /* -------------------------------- */
 
-
+/* SECTION ------------------------ */
 .album {
 	display: none;
 	width: 944px;
 	height: 260px!important;
 	margin: 0px auto 40px auto;
 	position: relative;
-	top: 130%;
+	top: 1240px;
 	overflow: hidden;
 }
-/*
-.album--footer {
-    position: relative;
-    margin-bottom: 0;
-}
-
-@media all and (max-width: 1099px) {
-    .album--footer {
-        padding: 150px 0 170px;
-    }
-}
-
-.album--footer .album__copyright {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    text-align: center;
-    color: #d0d0d0;
-    font-size: 12px;
-    font-family: "Adelle SansW01-Light";
-}
-
-.album--footer .album__label {
-    color: #003264;
-    display: block;
-    text-align: center;
-    font-family: "Helvetica";
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-@media all and (min-width: 1100px) {
-    .album--footer .album__label {
-        margin-bottom: 35px;
-    }
-}
-
-.album--footer .album__cta-container {
-    text-align: center;
-}
-
-.album--footer .album__cta {
-    background-color: #32e1e1;
-    color: #fff;
-    padding: 14px 20px 15px;
-    border-radius: 30px;
-    font-family: "Adelle SansW01-Light";
-    margin-left: 6px;
-    font-size: 12px;
-    line-height: 1em;
-    display: inline-block;
-    margin-bottom: 10px;
-    transition: background-color .15s linear;
-}
-
-.album--footer .album__cta--blue {
-    background-color: #00a0e4;
-}
-
-.album--footer .album__cta:first-child {
-    margin-left: 0;
-}
-
-.album--footer .album__cta:hover {
-    background-color: #003264;
-}
-
-@media all and (min-width: 1100px) {
-    .album--footer .album__cta {
-        font-size: 16px;
-        display: inline;
-        margin-bottom: 0;
-    }
-}
-
-@media all and (min-width: 720px) and (max-width: 1099px) {
-    .album--footer .album__col {
-        float: left;
-        width: 270px;
-    }
-
-    .album--footer .album__col:first-child {
-        margin-right: 100px;
-    }
-}
-
-@media all and (min-width: 720px) {
-    .album--footer .album__col:first-child {
-        position: relative;
-    }
-
-    .album--footer .album__col:first-child:after {
-        content: "";
-        display: block;
-        width: 1px;
-        height: 190px;
-        background-color: #003264;
-        position: absolute;
-        right: -50px;
-        top: -45px;
-    }
-}*/
 
 .album__col {
     width: 330px;
@@ -1206,11 +1089,13 @@ body input:checked ~ div .footnote {
 	float: left;
 	background-color: #FFF;
 	overflow: hidden;
+	position: relative;
 }
 
 .album__col:last-child{
 	padding: 40px 40px 0px 40px;
 }
+
 
 @media all and (min-width: 350px) {
     .album__col {
@@ -1227,13 +1112,9 @@ body input:checked ~ div .footnote {
 }
 
 @media all and (min-width: 1100px) {
-    .album__col {
-        width: 480px;
-		height: 260px;
-    }
-}
-
-@media all and (min-width: 1300px) {
+	.album {
+		width: 944px;
+	}
 	.album__col:first-child {
         width: 460px;
 		height: 260px;
@@ -1244,23 +1125,12 @@ body input:checked ~ div .footnote {
     }
 }
 
-@media all and (min-width: 1500px) {
-	.album__col:first-child {
-        width: 548px;
-		height: 312px;
-    }
-    .album__col:last-child {
-        width: 576px;
-		height: 312px;
-    }
-}
-
 .album__artwork {
     width: 280px;
     height: 210px;
     background-color: #e0e0e0;
-	transform: translate(-5%,-13.8%);
-	clip-path: inset(13.8% 2.5% 13.8% 2.5%);
+	transform: translate(0,-13.8%);
+	clip-path: inset(13.8% 0 13.8% 0);
 }
 
 @media all and (min-width: 350px) {
@@ -1314,10 +1184,10 @@ body input:checked ~ div .footnote {
     content: '';
     position: absolute;
     top: 30px;
-    left: 500px;
+    left: 40px;
     width: 60px;
     height: 5px;
-    background: #ff2b06;
+    background: #ff2100;
 }
 
 .excerpt{
@@ -1327,6 +1197,248 @@ body input:checked ~ div .footnote {
 	line-height: 20px;
 	margin: 15px 0 15px 0;
 }
+
+.year {
+	font-size: 125px;
+	font-weight: 600;
+	color: #ff2100;
+	display: block;
+	margin-bottom: 20px;
+}
+
+.year:after{
+	content: '';
+    position: absolute;
+    top: 143px;
+	left: 0; right: 0;
+	margin-left: auto;
+	margin-right: auto;
+    width: 300px;
+    height: 3px;
+    background: #292929;
+}
+
+.theme {
+	font-size: 27px;
+	font-weight: 600;
+	color: #292929;
+}
+
+.theme:after {
+	content: '';
+    position: absolute;
+    top: 213px;
+	left: 0; right: 0;
+	margin-left: auto;
+	margin-right: auto;
+    width: 300px;
+    height: 3px;
+    background: #292929;	
+}
+
+.section_title {
+	position: absolute;
+	text-align: center;
+	top: 0;
+	width: 100%;
+	margin: 0;
+	z-index: 0;
+}
+
+.album__col:first-child .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  background: url("../images/ui/youtube_in.png") center / 50px 50px no-repeat;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+}
+
+.album__col:first-child:hover .overlay {
+  opacity: 1;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.talkvideo {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+}
+/* -------------------------------- */
+
+/* PAGE FOOTER -------------------- */
+.page_footer {
+	position: relative;
+	display: none;
+	width: 100%;
+	height: 180px!important;
+	left: 0;
+	top: 1280px;
+	overflow: hidden;
+	background: rgba(255,255,255,1);
+	border-top: 5px solid #ff2100 !important;
+}
+
+.page_footer .copyright {
+    position: relative;
+	font-size: 12px;
+	font-weight: 500;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+    color: #ff2100;
+}
+
+.page_footer .footer_title {
+	width: 944px;
+    display: flex;
+	margin: 25px auto 8px auto;
+	overflow: hidden;
+	clear: both;
+}
+.page_footer .title {
+	float: left;
+	width: 460px;
+    color: #292929;
+    display: block;
+    font-size: 20px;
+	font-weight: 600;
+	border-bottom: 1px solid #292929;
+	padding: 0 0 8px 0;
+}
+
+.title:first-child{
+	width: 320px;
+	text-align: left;
+}
+
+.title:last-child{
+	width: 600px;
+	margin-left: 24px;
+	text-align: left;
+}
+
+.page_footer .subscribe_button {
+    background-color: #ff2100;
+    color: #fff;
+    padding: 9px 12px;
+    font-size: 16px;
+	letter-spacing: 1px;
+	text-align: center;
+	width: 170px;
+	margin: 0 0 0 10px;
+	border: 0;
+}
+
+.footer_section {
+	width: 944px;
+    display: flex;
+	margin: 4px auto 45px auto;
+	overflow: hidden;    
+	clear: both;
+}
+
+.fb_svg {
+	width: 30px;
+	height: 30px;
+	margin-right: 10px;
+	fill: #000;
+}
+.fb_svg:hover {
+	fill: #ff2100;
+}
+
+.tw_svg {
+	width: 30px;
+	height: 30px;
+	margin-right: 10px;
+	margin-left: 8px;
+	fill: #000;
+}
+
+.tw_svg:hover {
+	fill: #ff2100;
+}
+
+.it_svg {
+	width: 30px;
+	height: 30px;
+	margin-right: 10px;
+	margin-left: 10px;
+	fill: #000;
+}
+
+.it_svg:hover {
+	fill: #ff2100;
+}
+
+.in_svg {
+	width: 30px;
+	height: 30px;
+	margin-right: 12px;
+	margin-left: 10px;
+	fill: #000;
+}
+
+.in_svg:hover{
+	fill: #ff2100;
+}
+
+.mail_svg {
+	width: 30px;
+	height: 30px;
+	margin-right: 5px;
+	fill: #e0e0e0;
+}
+
+.footer_logos {
+	display: inline-flex;
+	width: 320px;
+	text-align: left;
+	margin-top: 8px;
+}
+
+.footer_subscribe {
+	width: 600px;
+	height: 40px;
+	margin-left: 24px;
+	margin-top: 8px;
+	display: inline-flex;
+}
+
+.input_text {
+	width: 380px;
+	height: 34px;
+	font-size: 20px;
+	color: #292929;
+	background-color: transparent;
+	border: 0;
+	border-bottom: 1px solid #e0e0e0;
+}
+
+/* do not group these rules */
+*::-webkit-input-placeholder {
+    color: #e0e0e0;
+}
+*:-moz-placeholder {
+    /* FF 4-18 */
+    color: #e0e0e0;
+}
+*::-moz-placeholder {
+    /* FF 19+ */
+    color: #e0e0e0;
+}
+*:-ms-input-placeholder {
+    /* IE 10+ */
+    color: #e0e0e0;
+}
+/* -------------------------------- */
 
 .album__name {
     font-size: 24px;
@@ -1422,9 +1534,9 @@ body input:checked ~ div .footnote {
 
 .album__play-button {
     float: left;
-    margin: 8px 0 0 15px;
+    margin: 0;
     color: #003264;
-    display: none;
+    display: block;
 }
 
 @media all and (min-width: 550px) {
@@ -1495,7 +1607,7 @@ body input:checked ~ div .footnote {
     right: 0;
     z-index: 1;
     overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+    /*-webkit-overflow-scrolling: touch;*/
     padding: 25px;
 }
 
@@ -1605,29 +1717,6 @@ body input:checked ~ div .footnote {
     transform: rotate(90deg);
 }
 
-
-
-
-.year {
-	font-size: 125px;
-	font-weight: 600;
-	color: #ff2100;/*rgb(230,230,230);*/
-	display: block;
-	margin-bottom: 20px;
-}
-
-.year:after{
-	content: '';
-    position: absolute;
-    top: 143px;
-	left: 0; right: 0;
-	margin-left: auto;
-	margin-right: auto;
-    width: 300px;
-    height: 3px;
-    background: #292929;
-}
-
 .bgtext {
 	font-size: 140px;
 	font-weight: 600;
@@ -1655,34 +1744,3 @@ body input:checked ~ div .footnote {
 .greyC {
 	color: #f2f2f2;
 }
-
-
-
-.theme {
-	font-size: 27px;
-	font-weight: 600;
-	color: #292929;
-}
-
-.theme:after {
-	content: '';
-    position: absolute;
-    top: 213px;
-	left: 0; right: 0;
-	margin-left: auto;
-	margin-right: auto;
-    width: 300px;
-    height: 3px;
-    background: #292929;	
-}
-
-.section_title {
-	position: absolute;
-	text-align: center;
-	top: 0;
-	width: 100%;
-	margin: 0;
-	z-index: 0;
-}
-
-
