--- a/css/test.css
+++ b/css/test.css
@@ -924,102 +924,182 @@ body input:checked ~ div .footnote {
     z-index: 0;
 }
 
-.list_item:nth-child(2) .list_bg, .list_item:nth-child(5) .list_bg, .list_item:nth-child(8) .list_bg {
-    background-color: #e0e0e0;
-}
-
-.list_item:nth-child(3) .list_bg, .list_item:nth-child(6) .list_bg, .list_item:nth-child(9) .list_bg {
-    background-color: #f2f2f2;
-}
-
 .list_bg {
     width: 100%;
     height: 100%;
     position: absolute;
     background-color: #00A0E4;
 }
+.list_item:nth-child(1) .list_bg {
+	background-color: #00A0E4;
+}
+.list_item:nth-child(2) .list_bg {
+	background-color: #00A0E4; /* CHANGE COLOR */
+}
+.list_item:nth-child(3) .list_bg {
+	background-color: #00A0E4; /* CHANGE COLOR */
+}
+.list_item:nth-child(4) .list_bg {
+	background-color: #292929;
+}
+.list_item:nth-child(5) .list_bg {
+	background-color: #e0e0e0;
+}
 
 .list_title {
-    font-size: 80px;
+    font-size: 85px;
     line-height: 1em;
 	letter-spacing: -5px;
 	font-weight: 600;
-    color: rgba(255,255,255,1);
+    color: #FFF;
     position: absolute;
-    z-index: 2;
-    top: 50%;
+    top: 37%;
     margin-top: -210px;
 	margin-left: 0;
     width: 60%;
     text-align: left;
 }
 
-@media all and (min-width: 450px) {
+.list_subtitle {
+	font-size: 22px;
+    line-height: 1em;
+	font-weight: 600;
+    color: #FFF;
+    position: absolute;
+    top: 37%;
+    margin-top: -6%;
+	margin-left: 15px;
+	display: flex;
+    text-align: left;
+	opacity: 0;
+}
+
+.list_subtitle span:nth-child(1) {
+	color:#ff2100; 
+	width: 50px;
+	opacity: 0;
+}
+
+.list_subtitle span:nth-child(2) {
+	width: 103px;
+	opacity: 0;
+}
+
+.list_subtitle span:nth-child(3) {
+	width: 115px;
+	opacity: 0;
+}
+
+.list_blurb {
+	font-size: 18px;
+	font-weight: 500;
+    color: #FFF;
+	line-height: 32px;
+    position: absolute;
+    top: 37%;
+	margin-top: -100%;
+	margin-left: 15px;
+    width: 290px;
+    text-align: left;
+	opacity: 0;
+}
+
+@media all and (min-width: 350px) {
     .list_title {
-        font-size: 130px;
+        font-size: 100px;
 		letter-spacing: -10px;
-		margin-top: -230px;
-    }
+		margin-top: -220px;
+	}
+	.list_subtitle {
+		font-size: 27px;
+		margin-top: 1%;
+	}
+	.list_subtitle span:nth-child(1) {
+		width: 58px;
+	}
+	.list_subtitle span:nth-child(2) {
+		width: 122px;
+	}
+	.list_subtitle span:nth-child(3) {
+		width: 145px;
+	}
+	.list_blurb {
+		font-size: 20px;
+		width: 320px;
+		margin-top: -55%;
+	}
+}
+@media all and (min-width: 550px) {
+    .list_title {
+        font-size: 143px;
+		letter-spacing: -10px;
+		margin-top: -215px;
+	}
+	.list_subtitle {
+		font-size: 36px;
+		margin-top: 3.5%;
+	}
+	.list_subtitle span:nth-child(1) {
+		width: 86px;
+	}
+	.list_subtitle span:nth-child(2) {
+		width: 173px;
+	}
+	.list_subtitle span:nth-child(3) {
+		width: 190px;
+	}
+	.list_blurb {
+		font-size: 20px;
+		width: 400px;
+		margin-top: 3%;
+	}
 }
 @media all and (min-width: 780px) {
     .list_title {
         font-size: 180px;
-		margin-top: -280px;
-    }
-}
-@media all and (min-width: 980px) {
-    .list_title {
-        font-size: 200px;
 		letter-spacing: -15px;
-		margin-top: -385px;
+		margin-top: -255px;
     }
-}
-@media all and (min-width: 980px) {
-    .list_title {
-        font-size: 200px;
-    }
+	.list_subtitle {
+		font-size: 45px;
+		margin-top: 3%;
+	}
+	.list_subtitle span:nth-child(1) {
+		width: 107px;
+	}
+	.list_subtitle span:nth-child(2) {
+		width: 215px;
+	}
+	.list_subtitle span:nth-child(3) {
+		width: 240px;
+	}
+	.list_blurb {
+		width: 450px;
+		margin-top: 4%;
+	}
 }
 @media all and (min-width: 1220px) {
     .list_title {
         font-size: 230px;
     }
+	.list_subtitle {
+		font-size: 61px;
+		margin-top: 5%;
+	}
+	.list_subtitle span:nth-child(1) {
+		width: 140px;
+	}
+	.list_subtitle span:nth-child(2) {
+		width: 290px;
+	}
+	.list_subtitle span:nth-child(3) {
+		width: 320px;
+	}
+	.list_blurb {
+		font-size: 24px;
+		margin-top: 2%;
+	}
 }
-@media all and (min-width: 1500px) {
-    .list_title {
-        font-size: 260px;
-    }
-}
-
-/* ONLY FOR CONTEST */
-.list_cta {
-    font-family: "Helvetica";
-    font-size: 16px;
-    line-height: 1em;
-    color: #fff;
-    position: absolute;
-    z-index: 3;
-    top: 50%;
-    margin-top: 20px;
-	margin-right: 10%;
-	margin-left: 10%;
-    width: 80%;
-    text-align: center;
-    opacity: 0;
-}
-
-@media all and (min-width: 780px) {
-    .list_cta {
-        margin-top: 35px;
-        font-size: 20px;
-    }
-}
-
-@media all and (min-width: 1650px) and (min-height: 1070px) {
-    .list_cta {
-        margin-top: 50px;
-    }
-}
-/* ---------------- */
 
 .list_header {
     position: absolute;
@@ -1058,19 +1138,10 @@ body input:checked ~ div .footnote {
 	filter: blur(4px);
 	transform: filter 0.7s ease-in-out;
 }
-
-
-.list_photo:nth-child(2) {
-    background-color: #003264;
-}
-
-.list_photo:nth-child(3) {
-    background-color: #fa4b4b;
-}
 /* -------------------------------- */
 
 /* SECTION ------------------------ */
-.album {
+.item_section {
 	display: none;
 	position: relative;
 	width: 942px;
@@ -1090,7 +1161,7 @@ body input:checked ~ div .footnote {
 	overflow: hidden;
 }
 
-.album__col {
+.section__col {
     width: 460px;
 	height: 260px;
     margin: 0;
@@ -1101,7 +1172,7 @@ body input:checked ~ div .footnote {
 	position: relative;
 }
 
-.album__col:last-child{
+.section__col:last-child{
 	padding: 40px 40px 0px 40px;
 }
 
@@ -1153,6 +1224,41 @@ body input:checked ~ div .footnote {
     background: #292929;	
 }
 
+.talkcontainer {
+	height:100%;
+	width:100%;
+	overflow:hidden;
+	cursor:pointer;
+	background: #000;
+}
+
+.imgtalk{
+	width: 460px;
+	height: 360px;
+	background-color: #e0e0e0;
+	transform: translate(0,-13.9%);
+	clip: inset(13.9% 0 13.9% 0);
+}
+
+.videotalk{
+	width: 100%;
+	height: 100%;
+}
+
+.hoverlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  background: url("../images/ui/youtube1.svg") center / 50px 50px no-repeat;
+}
+
+.section__col:hover .hoverlay {
+  background: url("../images/ui/youtube2.svg") center / 50px 50px no-repeat;
+}
+
 .main-header {
 	color: #292929;
 	font-size: 29px;
@@ -1186,14 +1292,14 @@ body input:checked ~ div .footnote {
 }
 
 @media all and (max-width: 1500px) {
-	.album {
+	.item_section {
 		width: 942px;
 	}
-	.album__col:first-child {
+	.section__col:first-child {
         width: 460px;
 		height: 260px;
     }
-    .album__col:last-child {
+    .section__col:last-child {
         width: 480px;
 		height: 260px;
     }
@@ -1218,15 +1324,15 @@ body input:checked ~ div .footnote {
 		top: 181px;
 		width: 250px;
 	}
-	.album {
+	.item_section {
 		width: 460px;
 		height: 500px!important;
 	}
-	.album__col:first-child {
+	.section__col:first-child {
         width: 460px;
 		height: 260px;
     }
-    .album__col:last-child {
+    .section__col:last-child {
         width: 460px;
 		height: 240px;
     }
@@ -1260,19 +1366,24 @@ body input:checked ~ div .footnote {
 	.theme:after {
 		display: none;
 	}
-	.album {
+	.item_section {
 		width: 300px;
 		height: 370px!important;
 	}
-	.album__col:first-child {
+	.section__col:first-child {
         width: 300px;
 		height: 170px;
     }
-    .album__col:last-child {
+    .section__col:last-child {
         width: 300px;
 		height: 200px;
 		padding: 20px;
     }
+	.imgtalk{
+		width: 300px;
+		height: 236px;
+
+	}
 	.main-header {
 		font-size: 17px;
 		line-height: 22px;
@@ -1793,77 +1904,6 @@ body input:checked ~ div .footnote {
     line-height: 1.4em;
 }
 
-.album__play-container {
-    height: 38px;
-    margin-top: 30px;
-    overflow: hidden;
-    display: none;
-    cursor: pointer;
-}
-
-@media all and (min-width: 1100px) {
-    .album__play-container {
-        display: inline-block;
-    }
-}
-
-.album__play-container:hover .album__spotify:after {
-    opacity: 1;
-}
-
-.album__play-container--playing .album__spotify {
-    background-position: -38px 0;
-}
-
-.album__play-container--playing .album__spotify:after {
-    background-position: -38px -38px;
-}
-
-.album__play-button {
-    float: left;
-    margin: 0;
-    color: #003264;
-    display: block;
-}
-
-@media all and (min-width: 550px) {
-    .album__play-button {
-        display: block;
-    }
-}
-
-.album__spotify {
-    float: left;
-    width: 38px;
-    height: 38px;
-    overflow: hidden;
-    cursor: pointer;
-    background-image: url(../images/ui/audio-sprite.png?12);
-    background-repeat: no-repeat;
-    background-size: 76px 76px;
-    background-position: 0 0;
-}
-
-.album__spotify:after {
-    content: "";
-    display: block;
-    width: 38px;
-    height: 38px;
-    background-image: url(../images/ui/audio-sprite.png?12);
-    background-repeat: no-repeat;
-    background-size: 76px 76px;
-    background-position: 0 -38px;
-    opacity: 0;
-    transition: opacity .15s linear;
-}
-
-.album__spotify iframe {
-    border: none;
-    width: 80px;
-    height: 80px;
-    margin: -1px 0 0 -1px;
-}
-
 .artist-panel {
     position: fixed;
     width: 100%;
@@ -2004,6 +2044,7 @@ body input:checked ~ div .footnote {
     transform: rotate(90deg);
 }
 
+/* OTHER STUFF */
 .bgtext {
 	font-size: 140px;
 	font-weight: 600;
@@ -2032,24 +2073,47 @@ body input:checked ~ div .footnote {
 	color: #f2f2f2;
 }
 
-.hoverlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  background: url("../images/ui/youtube1.svg") center / 50px 50px no-repeat;
+.arrow {
+	position: fixed;
+	width: 30px;
+	height: 30px;
+	margin: 0 auto;
+	bottom: 30px;
+	left: 50%;
+	fill: #FFF;
+	opacity: 0;
 }
 
-.album__col:hover .hoverlay {
-  background: url("../images/ui/youtube2.svg") center / 50px 50px no-repeat;
+.arrow svg{
+	width: 100%;
+	height: 100%;
 }
 
-.talkcontainer {
-	height:260px;
-	width:460px;
-	overflow:hidden;
-	cursor:pointer;
-	background: #000;
+.bounce {
+	animation: bounce 2s infinite;
+	-webkit-animation: bounce 2s infinite;
+	-moz-animation: bounce 2s infinite;
+}
+
+@keyframes bounce{
+	0%, 20%, 50%, 80%, 100% {
+    bottom: 20px;
+  }
+	40% {
+    bottom: 50px;
+  }
+	60% {
+    bottom: 35px;
+  }
+}
+
+
+.bg {
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    background: url("../images/photos/microphone.jpg") center no-repeat;
+	background-size: cover;
+	transform: scaleX(-1);
+	overflow: hidden;
 }
